--- a/QtSudoku/mainwindow.ui
+++ b/QtSudoku/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1107</width>
     <height>600</height>
    </rect>
   </property>
@@ -14,118 +14,112 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButtonEasy">
+   <widget class="QTabWidget" name="GameTab">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>200</y>
-      <width>89</width>
-      <height>25</height>
+      <x>9</x>
+      <y>9</y>
+      <width>601</width>
+      <height>461</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Easy</string>
+    <property name="tabPosition">
+     <enum>QTabWidget::South</enum>
     </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <widget class="QWidget" name="DifficultyTab">
+     <attribute name="title">
+      <string>Difficulty</string>
+     </attribute>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Select difficulty:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="pushButtonEasy">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Easy</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="pushButtonNormal">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Normal</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="pushButtonHard">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Hard</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QPushButton" name="pushButtonExpert">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Expert</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="FieldTab">
+     <attribute name="title">
+      <string>Game</string>
+     </attribute>
+    </widget>
    </widget>
-   <widget class="QPushButton" name="pushButtonNormal">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>260</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Normal</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButtonHard">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>320</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Hard</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>150</y>
-      <width>111</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Select difficulty:</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButtonExpert">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>380</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Expert</string>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="SudokuTable">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>10</y>
-      <width>150</width>
-      <height>150</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>16777213</width>
-      <height>16777215</height>
-     </size>
-    </property>
-    <property name="inputMethodHints">
-     <set>Qt::ImhDigitsOnly</set>
-    </property>
-    <property name="verticalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-    <property name="horizontalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-   </widget>
-   <zorder>SudokuTable</zorder>
-   <zorder>label</zorder>
-   <zorder>pushButtonEasy</zorder>
-   <zorder>pushButtonExpert</zorder>
-   <zorder>pushButtonHard</zorder>
-   <zorder>pushButtonNormal</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1107</width>
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuQTSudoku">
-    <property name="title">
-     <string>QTSudoku</string>
-    </property>
-   </widget>
-   <addaction name="menuQTSudoku"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
